# Swiftblade

./: .gitignore  .gitmodules  CMakeLists.txt  PhysX_Build_Preset_vc17win64-cpu-only.xml  PrintFiles.bat  README.md  build.bat  gen.bat  picam.sh  picam_receiver.sh  picam_reciever.bat  picam_reciever.sh  picam_sender.sh  picam_sender_raw.sh  renderdoc.cap
Engine/: CMakeLists.txt  gen.bat  run_web.bat  run_web.sh  shell_minimal.html
Engine/cmake/: CMakeOptions.cmake  CompileOptions.cmake  Executable.cmake  Include.cmake  Library.cmake  Link.cmake  Pch.cmake  Platform.cmake  Retail.cmake  SharedCompileOptions.cmake  Source.cmake
Engine/cmake/Dependencies/: FastNoiseLite.cmake  MeshOptimizer.cmake  Miniaudio.cmake  Nakama.cmake  OpenCV.cmake  PicoSHA2.cmake  RapidJSON.cmake  ReactPhysics3D.cmake  STB.cmake  TinyAES.cmake  TinyExpr.cmake  TinyGLTF.cmake  TinyObjLoader.cmake  Tracy.cmake  WebGPU.cmake
Engine/content/: CMakeLists.txt  RM_Blit.json  RM_Test.json  SH_Test.wgsl
Engine/content/Blueprints/: BP_CubeVolume.json
Engine/content/Configs/: C_AssetBrowser.json  C_Debug.json  C_Input.json  C_Launcher.json  C_Rendering.json  C_RoomEditor.json  C_Story.json
Engine/content/Defaults/: BT_BRDF.json  T_Noise_Cellular.json
Engine/content/Editor/: SH_EditBlock.ds
Engine/content/Scenes/: S_GameStart.json
Engine/content/Shaders/: SH_Blit.wgsl
Engine/content/ShadersGLSL/: SH_Default.ds
Engine/source/Application/: Application.cpp  Application.h  Audio.cpp  Audio.h  CMakeLists.txt  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  main.cpp  pch.h
Engine/source/Audio/: Audio.cpp  Audio.h  CMakeLists.txt  Manager.cpp  Manager.h  Profile.h  Utility.h  pch.h
Engine/source/Core/: CMakeLists.txt  Utility.h  pch.h
Engine/source/Editor/: CMakeLists.txt  Manager.cpp  Manager.h  pch.h
Engine/source/Engine/: CMakeLists.txt  EditTransform.cpp  FreeCamera.cpp  FreeCamera.h  Manager.cpp  Manager.h  pch.h
Engine/source/Game/: CMakeLists.txt  main.cpp
Engine/source/ImGui/: CMakeLists.txt  imgui_custom.h  imgui_themes.h
Engine/source/Rendering/: CMakeLists.txt  FramePacer.h  ImGuiContext.cpp  ImGuiContext.h  Manager.cpp  Manager.h  Mesh.h  MeshLoader.h  Profile.h  UniformBuffer.cpp  UniformBuffer.h  Utility.cpp  Utility.h  pch.h
Engine/source/Rendering2/: CMakeLists.txt  FramePacer.h  Utility.h  pch.h
Engine/source/RenderingOld/: CMakeLists.txt  GLProfile.h
Engine/source/Utility/: CMakeLists.txt  Color.h  GUID.cpp  GUID.h  Logging.cpp  Logging.h  Type.h  Utility.h  pch.h
Game/content/: CMakeLists.txt
Game/content/Configs/: C_AssetBrowser.json  C_BlueprintEditor.json  C_Debug.json  C_Launcher.json  C_Menu.json  C_Movement.json
Game/content/Defaults/: RM_ParticleDefault.json  T_Noise_Simplex.json
Game/content/Dressing/: RM_StoneWall.json  SH_BrickWall.ds  SH_BrickWall.fs  SH_StoneWall.ds
Game/content/Editor/: RM_EditBlock.json  RM_EditMarker.json  SH_EditMarker.fs  SH_EditPath.ds
Game/content/ShadersGLSL/: SH_FontSDF.vs  SH_Surface.ps
Game/source/: CMakeLists.txt  pch.h
Game/source/Database/: Config.h  Events.h  Manager.cpp  Manager.h  NakamaTypes.h  NetResource.h
Game/source/ECS/: Registration.h
Game/source/Editor/: EditRoom.h  RoomEditor.cpp  RoomSubEditor.h
Game/source/Instances/: GameInstance.cpp  GameInstance.h  MenuInstance.cpp  RenderInstance.h
Game/source/Level/: LevelManager.h
Game/source/content/: CMakeLists.txt
RayEngine/: CMakeLists.txt  gen.bat  renderdoc.cap  run_web.sh
RayEngine/cmake/: AES.cmake  CompileOptions.cmake  Executable.cmake  IWYU.cmake  Include.cmake  Link.cmake  Pch.cmake  Raylib.cmake  Source.cmake  Tracy.cmake  miniaudio.cmake
RayEngine/content/: CMakeLists.txt  cube.json  imgui.ini  player.json  renderSettings.json
RayEngine/content/Blueprints/: BP_Cube.json  BP_CubeVolume.json  BP_LevelEnd.json  BP_Player.json  BP_RoomConnection.json  BP_RoomEnd.json
RayEngine/content/Configs/: C_Animation.json  C_AssetBrowser.json  C_BlueprintEditor.json  C_Combat.json  C_Debug.json  C_Input.json  C_Launcher.json  C_Lumin.json  C_Menu.json  C_Movement.json  C_Rendering.json  C_RoomConnectionEditor.json  C_RoomEditor.json  C_RoomObjectEditor.json
RayEngine/content/Defaults/: BT_BRDF.json  PM_Default.json  RM_Default.json  SH_Default.fs  SH_Default.vs  SH_Deferred_Default.fs  SH_Deferred_Default.vs  T_Noise_Perlin.json
RayEngine/content/Dressing/: DA_Dress_Default.json  RM_DressWall.json  RM_StoneWall.json  SH_BrickWall.ds  SH_BrickWall.fs  SH_DressWall.fs  SH_StoneWall.ds
RayEngine/content/Editor/: RM_EditCube.json  RM_EditMarker.json  RM_EditPath.json  SH_EditBlock.ds  SH_EditCube.fs  SH_EditCube.vs  SH_EditMarker.ds  SH_EditMarker.fs  SH_EditPath.ds
RayEngine/content/Gameplay/: BP_Checkpoint.json  BP_GameEnd.json  BP_RoomConnection.json  BP_SectionEnd.json
RayEngine/content/Player/: BP_Player.json  BP_Sword.json  PM_Player.json
RayEngine/content/RoomEditor/: RM_EditCube.json  SH_EditCube.fs  SH_EditCube.vs
RayEngine/content/Scenes/: RM_Room_1.json  RM_Scene.json  RM_test.json  S_End.json  S_GameEnd.json  S_GameStart.json  S_SectionEnd.json  S_SectionStart.json  S_Start.json  untitled.json
RayEngine/content/Shaders/: SH_Default.ds  SH_Default.fs  SH_Default.vs  SH_Default_ds.si  SH_Default_fs.si  SH_Default_vs.si  SH_DeferredID.si  SH_DeferredTextures.si  SH_FXAA.ps  SH_FontSDF.fs  SH_FontSDF.vs  SH_FrameUniforms.si  SH_Fullscreen.vs  SH_HSV.si  SH_PBR.si  SH_Pixelize.si  SH_ProcessScene.ps  SH_Quantize.ps  SH_Random.si  SH_SSAO.ps  SH_ScreenDistortion.si  SH_Surface.ps  SH_TextureUniforms.si  SH_Utility.si
RayEngine/include/physx/: PxShape.h
RayEngine/source/: main.cpp  pch.h
RayEngine/source/Core/: CMakeLists.txt  pch.h
RayEngine/source/Editor/: BlueprintEditor.cpp  BlueprintEditor.h  EditorCamera.cpp  EditorCamera.h
RayEngine/source/Engine/: BaseConfig.h  CMakeLists.txt  pch.h
RayEngine/source/Game/: CMakeLists.txt  Game.cpp  Game.h  GameInstance.cpp  GameInstance.h  GameState.h  MenuInstance.cpp  MenuInstance.h  RoomEditor.cpp  RoomEditor.h  RoomManager.cpp  RoomManager.h  (+3 more)
(+2125 files in other folders)
