cmake_minimum_required(VERSION 3.21)
cmake_policy(SET CMP0135 NEW)
cmake_policy(SET CMP0169 OLD)

project(Engine VERSION 0.1.0 LANGUAGES CXX C)

include(cmake/CMakeOptions.cmake)
include(cmake/Platform.cmake)
include(cmake/Retail.cmake)
include(cmake/SharedCompileOptions.cmake)

set(DEP_INCLUDES "")
set(DEPENDENCY_DIR cmake/Dependencies)
include(${DEPENDENCY_DIR}/FastNoiseLite.cmake)
include(${DEPENDENCY_DIR}/MeshOptimizer.cmake)
include(${DEPENDENCY_DIR}/Miniaudio.cmake)
include(${DEPENDENCY_DIR}/Nakama.cmake)
include(${DEPENDENCY_DIR}/PicoSHA2.cmake)
include(${DEPENDENCY_DIR}/RapidJSON.cmake)
include(${DEPENDENCY_DIR}/ReactPhysics3D.cmake)
include(${DEPENDENCY_DIR}/STB.cmake)
include(${DEPENDENCY_DIR}/TinyAES.cmake)
include(${DEPENDENCY_DIR}/TinyExpr.cmake)
include(${DEPENDENCY_DIR}/TinyObjLoader.cmake)
include(${DEPENDENCY_DIR}/Tracy.cmake)
include(${DEPENDENCY_DIR}/WebGPU.cmake)
add_subdirectory(source/ImGui)

# Projects
add_subdirectory(source/Utility)
add_subdirectory(source/Core)
add_subdirectory(source/Audio)
add_subdirectory(source/Rendering)
add_subdirectory(source/Engine)
add_subdirectory(source/Game)
add_subdirectory(source/Editor)
add_subdirectory(source/Application)
add_subdirectory(content)
